# FSTRA_api

./:  README.md  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  init.sql  pyproject.toml
fstr_api/: __init__.py  app.py  db.py  models.py  rest_api.py  utils.py
