[tool.poetry]
name = "FSTR_api"
version = "0.1.0"
description = ""
authors = ["range <alexadush@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
asyncpg = "^0.25.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
